--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
     </div>
 
     <div class="container mx-auto flex justify-center flex-col hidden" id="tasks_container">
-        <div class="task-1 border-2 border-cyan-500 mt-16 p-2 rounded-md">
+        <div class="task-1 border-2 border-cyan-500 mt-16 p-2 rounded-md mx-2">
             <h2 class="big-text">Вопрос 1</h2>
             <p id="question_1">text</p>
             <h2 class="big-text">Ответ:</h2>
             <p id="answer_1">text</p>
         </div>
 
-        <div class="task-1 border-2 border-cyan-500 mt-16 p-2 rounded-md">
+        <div class="task-1 border-2 border-cyan-500 mt-16 p-2 rounded-md mx-2">
             <h2 class="big-text">Вопрос 2</h2>
             <p id="question_2">text</p>
             <h2 class="big-text">Ответ:</h2>
             <p id="answer_2">text</p>
         </div>
 
-        <div class="task-1 border-2 border-cyan-500 mt-16 p-2 rounded-md">
+        <div class="task-1 border-2 border-cyan-500 mt-16 p-2 rounded-md mx-2">
             <h2 class="big-text">Задача 3</h2>
             <p id="question_3">text</p>
             <h2 class="big-text">Ответ:</h2>
             <div class="flex justify-center flex-wrap">
-                <div class="flex justify-center border-2 border-cyan-500 rounded-md">
+                <div class="flex justify-center border-2 border-cyan-500 rounded-md  mb-5">
                     
                     <a href="img/image_1.jpeg" data-lightbox="image-1" data-title="My caption" id="link_image">
                         <img src="" alt="" id="answer_img">
