--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 
                 <div class="rounded-md w-40 text-center bg-gray-500 hidden" id="tickets-list">
                     <div class="p-2 cursor-pointer checked" onclick="render_ticket(1)">Билет 1</div>
-                    <div class="p-2  cursor-pointer started" onclick="render_ticket(2)">Билет 2</div>
-                    <div class="p-2  cursor-pointer started" onclick="render_ticket(3)">Билет 3</div>
-                    <div class="p-2  cursor-pointer started" onclick="render_ticket(4)">Билет 4</div>
-                    <div class="p-2  cursor-pointer" onclick="render_ticket(5)">Билет 5</div>
+                    <div class="p-2  cursor-pointer checked" onclick="render_ticket(2)">Билет 2</div>
+                    <div class="p-2  cursor-pointer checked" onclick="render_ticket(3)">Билет 3</div>
+                    <div class="p-2  cursor-pointer checked" onclick="render_ticket(4)">Билет 4</div>
+                    <div class="p-2  cursor-pointer started" onclick="render_ticket(5)">Билет 5</div>
                     <div class="p-2  cursor-pointer" onclick="render_ticket(6)">Билет 6</div>
                     <div class="p-2  cursor-pointer" onclick="render_ticket(7)">Билет 7</div>
                     <div class="p-2  cursor-pointer" onclick="render_ticket(8)">Билет 8</div>
